--- a/JenkinFlowTest/Dockerfile
+++ b/JenkinFlowTest/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8-jdk-alpine3.9
 	VOLUME /temp
 	EXPOSE 8080
-	ADD target/*.jar app.jar
+	ADD *.jar app.jar
 	ENTRYPOINT ["sh", "-c", "java -jar /app.jar"]
